# CC5114

./: .gitignore
T1/: CMakeLists.txt  Funcion.cpp  Funcion.h  Funciones.cpp  Funciones.h  Layer.cpp  Layer.h  LearningPerceptron.cpp  LearningPerceptron.h  NPerceptron.cpp  NPerceptron.h  RedNeuronal.cpp  RedNeuronal.h  SigmoidNeuron.cpp  SigmoidNeuron.h  main.cpp  main2.cpp
T2/: CMakeLists.txt  GA_T.h  Integer_GA.cpp  Integer_GA.h  Makefile  Readme.md  graficar.py  main_0-1_knapsack.cpp  main_bits.cpp  main_words.cpp  utils.cpp  utils.h
T3/: AST.h  AddNode.h  BinaryNode.h  CMakeLists.txt  GP.h  MaxNode.h  MultNode.h  Node.h  NodeFactory.h  SubNode.h  TerminalNode.h  num_con_repeticiones.cpp  utils.cpp
T3_java/: Readme.md  pom.xml
T3_java/src/main/java/: AST.java  AddNode.java  BinaryNode.java  DivisionNode.java  GP.java  GPMethods.java  Main.java  MainSinReapeat.java  MainWithDivision.java  MaxNode.java  MultNode.java  MyFunction.java  Node.java  NodeFactory.java  NumRep.java  NumSinRep.java  P1ConRepeticiones.java  SubNode.java  TerminalNode.java  Utils.java  WithDivision.java  graficar.py  p1.txt  p1_2.txt  p2.txt  p4.txt
